editing environment variables, changed airflow image version to be compatible

--- a/.env
+++ b/.env
@@ -6,13 +6,13 @@ POSTGRES_DB=covid19_project
 
 
 ###airflow environment variables
-LOAD_EX=n
-EXECUTOR=LocalExecutor
-AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
-AIRFLOW__CORE__FERNET_KEY=your_fernet_key
-AIRFLOW__CORE__LOAD_EXAMPLES=False
-DB_USER=postgresql
-DB_PASSWORD=admin
-DB_HOST=db
-DB_PORT=5432
-DB_NAME=covid19_project
+# LOAD_EX=n
+# EXECUTOR=LocalExecutor
+# AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
+# AIRFLOW__CORE__FERNET_KEY=your_fernet_key
+# AIRFLOW__CORE__LOAD_EXAMPLES=False
+# DB_USER=postgresql
+# DB_PASSWORD=admin
+# DB_HOST=db
+# DB_PORT=5432
+# DB_NAME=covid19_project
