--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 services:
   db:
@@ -17,19 +17,21 @@ services:
   airflow:
     build: ./airflow
     restart: always
-    env_file:
-      - .env
-    # environment:
-    #   - LOAD_EX=n
-    #   - EXECUTOR=LocalExecutor
-    #   - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://your_db_user:your_db_password@db:5432/your_db_name
-    #   - AIRFLOW__CORE__FERNET_KEY=your_fernet_key
-    #   - AIRFLOW__CORE__LOAD_EXAMPLES=False
-    #   - DB_USER=your_db_user
-    #   - DB_PASSWORD=your_db_password
-    #   - DB_HOST=db
-    #   - DB_PORT=5432
-    #   - DB_NAME=your_db_name
+    environment:
+       - LOAD_EX: n
+       - EXECUTOR: LocalExecutor
+       - AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
+       - AIRFLOW__CORE__FERNET_KEY: ""
+       - AIRFLOW__CORE__LOAD_EXAMPLES: False
+       - DB_USER: postgresql
+       - DB_PASSWORD: admin
+       - DB_HOST: db
+       - DB_PORT: 5432
+       - DB_NAME: covid19_project
+       - AIRFLOW__CORE__EXECUTOR: SequentialExecutor
+       - _AIRFLOW_WWW_USER_CREATE: 'true'
+       - _AIRFLOW_WWW_USER_USERNAME: airflow
+       - _AIRFLOW_WWW_USER_PASSWORD: airflow
     volumes:
       - ./airflow/dags:/opt/airflow/dags
       - ./scripts:/app/scripts
