--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,39 +3,37 @@ version: '3.3'
 services:
   db:
     image: postgres:13
-    env_file:
-      - .env
-    # environment:
-    #   POSTGRES_USER: your_db_user
-    #   POSTGRES_PASSWORD: your_db_password
-    #   POSTGRES_DB: your_db_name
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - ./pgdata:/var/lib/postgresql/data
 
   airflow:
     build: ./airflow
     restart: always
-    environment:
-       - LOAD_EX: n
-       - EXECUTOR: LocalExecutor
-       - AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
-       - AIRFLOW__CORE__FERNET_KEY: ""
-       - AIRFLOW__CORE__LOAD_EXAMPLES: False
-       - DB_USER: postgresql
-       - DB_PASSWORD: admin
-       - DB_HOST: db
-       - DB_PORT: 5432
-       - DB_NAME: covid19_project
-       - AIRFLOW__CORE__EXECUTOR: SequentialExecutor
-       - _AIRFLOW_WWW_USER_CREATE: 'true'
-       - _AIRFLOW_WWW_USER_USERNAME: airflow
-       - _AIRFLOW_WWW_USER_PASSWORD: airflow
+    env_file:
+      - .env
+    # environment:
+    #    - EXECUTOR=LocalExecutor
+    #    - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
+    #    - AIRFLOW__CORE__FERNET_KEY=
+    #    - AIRFLOW__CORE__LOAD_EXAMPLES=False
+    #    - DB_USER=postgresql
+    #    - DB_PASSWORD=admin
+    #    - DB_HOST=db
+    #    - DB_PORT=5432
+    #    - DB_NAME=covid19_project
+    #    - _AIRFLOW_WWW_USER_CREATE=true
+    #    - _AIRFLOW_WWW_USER_USERNAME=airflow
+    #    - _AIRFLOW_WWW_USER_PASSWORD=airflow
     volumes:
       - ./airflow/dags:/opt/airflow/dags
-      - ./scripts:/app/scripts
-      - ./dbt_project:/app/dbt_project
+      - ./scripts:/opt/airflow/scripts
+      - ./dbt_project:/opt/airflow/dbt_project
     ports:
       - "8080:8080"
     depends_on:
@@ -49,8 +47,12 @@ services:
       - db
       - airflow
     environment:
-      - EXECUTOR=LocalExecutor
+      - EXECUTOR=CeleryExecutor
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+      - ./scripts:/opt/airflow/scripts
+      - ./dbt_project:/opt/airflow/dbt_project
     command: scheduler
 
 volumes:
-  db_data:
+  pgdata:
