editing environment variables in docker-compose.yml file

--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ POSTGRES_DB=covid19_project
 
 ###airflow environment variables
 LOAD_EX=n
-AIRFLOW__CORE__EXECUTOR=CeleryExecutor
-AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
+EXECUTOR=CeleryExecutor
+SQL_ALCHEMY=postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
 AIRFLOW__CORE__FERNET_KEY=
 AIRFLOW__CORE__LOAD_EXAMPLES=False
 DB_USER=postgresql
@@ -16,6 +16,5 @@ DB_PASSWORD=admin
 DB_HOST=db
 DB_PORT=5432
 DB_NAME=covid19_project
-_AIRFLOW_WWW_USER_CREATE=true
-_AIRFLOW_WWW_USER_USERNAME=airflow
-_AIRFLOW_WWW_USER_PASSWORD=airflow
+AIRFLOW_USER=airflow
+AIRFLOW_PASSWORD=airflow
