refactoring entire code for new solution

--- a/.env
+++ b/.env
@@ -1,20 +1,21 @@
-
 ###db environment variables
 POSTGRES_USER=postgresql
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=covid19_project
 
+# Backend DB - update your username and password
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgresql:admin@postgres/covid19_project
+AIRFLOW__DATABASE__LOAD_DEFAULT_CONNECTIONS=False
 
-###airflow environment variables
-LOAD_EX=n
-EXECUTOR=CeleryExecutor
-SQL_ALCHEMY=postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
-AIRFLOW__CORE__FERNET_KEY=
-AIRFLOW__CORE__LOAD_EXAMPLES=False
+# Airflow Init
+_AIRFLOW_DB_UPGRADE=True
+_AIRFLOW_WWW_USER_CREATE=True
+_AIRFLOW_WWW_USER_USERNAME=postgres
+_AIRFLOW_WWW_USER_PASSWORD=admin
+
+#python script variables
 DB_USER=postgresql
 DB_PASSWORD=admin
 DB_HOST=db
 DB_PORT=5432
 DB_NAME=covid19_project
-AIRFLOW_USER=airflow
-AIRFLOW_PASSWORD=airflow
