fixing env variables

--- a/.env
+++ b/.env
@@ -16,6 +16,6 @@ _AIRFLOW_WWW_USER_PASSWORD=airflow
 #python script variables
 DB_USER=postgresql
 DB_PASSWORD=admin
-DB_HOST=db
+DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=covid19_project
