--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 x-common:
   &common
-  build: ./airflow
+  image: apache/airflow:2.3.0
   user: "${AIRFLOW_UID}:0"
   env_file: 
     - .env
@@ -40,7 +40,8 @@ services:
       - 5432:5432
 
   scheduler:
-    <<: [*common, *depends-on]
+    <<: [*depends-on]
+
     container_name: airflow-scheduler
     command: scheduler
     restart: on-failure
@@ -48,7 +49,16 @@ services:
       - "8793:8793"
 
   webserver:
-    <<: [*common, *depends-on]
+    <<: [*depends-on]
+    build: ./airflow
+    user: "${AIRFLOW_UID}:0"
+    env_file: 
+      - .env
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
+      - ./plugins:/opt/airflow/plugins
+      - /var/run/docker.sock:/var/run/docker.sock
     container_name: airflow-webserver
     restart: always
     command: webserver
