change airflow base image

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,14 +1,6 @@
-FROM apache/airflow:2.9.2
+FROM apache/airflow:2.3.0
 
-# Install dbt and other required packages
-USER root
-COPY requirements.txt /requirements.txt
 
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    libpq-dev \
-    python3-dev \
-    && pip install --upgrade pip \
-    pip install --no-cache-dir -r /requirements.txt
+RUN python -m venv dbt_venv && source dbt_venv/bin/activate && \
+    pip install --no-cache-dir dbt-postgres && deactivate
 
-USER airflow
