--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,51 @@
 version: '3'
 
-x-common:
-  &common
-  build: ./airflow
-  #image: apache/airflow:2.3.0
-  user: "${AIRFLOW_UID}:0"
-  env_file: 
-    - .env
-  environement:
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+# x-common:
+#   &common
+#   build: ./airflow
+#   #image: apache/airflow:2.3.0
+#   user: "${AIRFLOW_UID}:0"
+#   env_file: 
+#     - .env
+#   environement:
+#     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+#     _AIRFLOW_WWW_USER_USERNAME: airflow
+#     _AIRFLOW_WWW_USER_PASSWORD: airflow
+#     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
+#     AIRFLOW__CORE__FERNET_KEY: ''
+
+#   volumes:
+#     - ./dags:/opt/airflow/dags
+#     - ./logs:/opt/airflow/logs
+#     - ./plugins:/opt/airflow/plugins
+#     - /var/run/docker.sock:/var/run/docker.sock
+
+x-airflow-common:
+  &airflow-common
+  # In order to add custom dependencies or upgrade provider packages you can use your extended image.
+  # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
+  # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
+  # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.5.0}
+  build: .
+  environment:
+    &airflow-common-env
+    AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgresql:admin@postgres/covid19_project
+    # For backward compatibility, with Airflow <2.3
+    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgresql:admin@postgres/covid19_project
+    AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
+    AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
     _AIRFLOW_WWW_USER_USERNAME: airflow
     _AIRFLOW_WWW_USER_PASSWORD: airflow
-    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__FERNET_KEY: ''
-
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
-    - /var/run/docker.sock:/var/run/docker.sock
+  user: "${AIRFLOW_UID:-50000}:0"
+
 
 x-depends-on:
   &depends-on
@@ -47,7 +74,7 @@ services:
       - 5432:5432
 
   scheduler:
-    <<: [*common, *depends-on]
+    <<: [*airflow-common, *depends-on]
     container_name: airflow-scheduler
     command: scheduler
     restart: on-failure
@@ -55,7 +82,7 @@ services:
       - "8793:8793"
 
   webserver:
-    <<: [*common, *depends-on]
+    <<: [*airflow-common, *depends-on]
     container_name: airflow-webserver
     restart: always
     command: webserver
@@ -68,7 +95,7 @@ services:
       retries: 5
   
   airflow-init:
-    <<: *common
+    <<: *airflow-common
     container_name: airflow-init
     entrypoint: /bin/bash
     command:
