--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,24 @@
 version: '3'
 
-# x-common:
-#   &common
-#   build: ./airflow
-#   #image: apache/airflow:2.3.0
-#   user: "${AIRFLOW_UID}:0"
-#   env_file: 
-#     - .env
-#   environement:
-#     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
-#     _AIRFLOW_WWW_USER_USERNAME: airflow
-#     _AIRFLOW_WWW_USER_PASSWORD: airflow
-#     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-#     AIRFLOW__CORE__FERNET_KEY: ''
-
-#   volumes:
-#     - ./dags:/opt/airflow/dags
-#     - ./logs:/opt/airflow/logs
-#     - ./plugins:/opt/airflow/plugins
-#     - /var/run/docker.sock:/var/run/docker.sock
-
-x-airflow-common:
-  &airflow-common
-  # In order to add custom dependencies or upgrade provider packages you can use your extended image.
-  # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
-  # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.5.0}
-  build: .
-  environment:
-    &airflow-common-env
-    AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgresql:admin@postgres/covid19_project
-    # For backward compatibility, with Airflow <2.3
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://postgresql:admin@postgres/covid19_project
-    AIRFLOW__CORE__FERNET_KEY: ''
-    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
-    AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
+x-common:
+  &common
+  build: ./airflow
+  #image: apache/airflow:2.3.0
+  user: "${AIRFLOW_UID}:0"
+  env_file: 
+    - .env
+  environement:
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     _AIRFLOW_WWW_USER_USERNAME: airflow
     _AIRFLOW_WWW_USER_PASSWORD: airflow
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+    AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
+    AIRFLOW__CORE__FERNET_KEY: ''
+
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
-  user: "${AIRFLOW_UID:-50000}:0"
+    - /var/run/docker.sock:/var/run/docker.sock
 
 
 x-depends-on:
@@ -74,7 +48,7 @@ services:
       - 5432:5432
 
   scheduler:
-    <<: [*airflow-common, *depends-on]
+    <<: [*common, *depends-on]
     container_name: airflow-scheduler
     command: scheduler
     restart: on-failure
@@ -82,7 +56,7 @@ services:
       - "8793:8793"
 
   webserver:
-    <<: [*airflow-common, *depends-on]
+    <<: [*common, *depends-on]
     container_name: airflow-webserver
     restart: always
     command: webserver
@@ -95,72 +69,15 @@ services:
       retries: 5
   
   airflow-init:
-    <<: *airflow-common
+    <<: *common
     container_name: airflow-init
     entrypoint: /bin/bash
     command:
-       - -c
-       - |
-         function ver() {
-           printf "%04d%04d%04d%04d" $${1//./ }
-         }
-         airflow_version=$$(AIRFLOW__LOGGING__LOGGING_LEVEL=INFO && gosu airflow airflow version)
-         airflow_version_comparable=$$(ver $${airflow_version})
-         min_airflow_version=2.2.0
-         min_airflow_version_comparable=$$(ver $${min_airflow_version})
-         if (( airflow_version_comparable < min_airflow_version_comparable )); then
-           echo
-           echo -e "\033[1;31mERROR!!!: Too old Airflow version $${airflow_version}!\e[0m"
-           echo "The minimum Airflow version supported: $${min_airflow_version}. Only use this or higher!"
-           echo
-           exit 1
-         fi
-         if [[ -z "${AIRFLOW_UID}" ]]; then
-           echo
-           echo -e "\033[1;33mWARNING!!!: AIRFLOW_UID not set!\e[0m"
-           echo "If you are on Linux, you SHOULD follow the instructions below to set "
-           echo "AIRFLOW_UID environment variable, otherwise files will be owned by root."
-           echo "For other operating systems you can get rid of the warning with manually created .env file:"
-           echo "    See: https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#setting-the-right-airflow-user"
-           echo
-         fi
-         one_meg=1048576
-         mem_available=$$(($$(getconf _PHYS_PAGES) * $$(getconf PAGE_SIZE) / one_meg))
-         cpus_available=$$(grep -cE 'cpu[0-9]+' /proc/stat)
-         disk_available=$$(df / | tail -1 | awk '{print $$4}')
-         warning_resources="false"
-         if (( mem_available < 4000 )) ; then
-           echo
-           echo -e "\033[1;33mWARNING!!!: Not enough memory available for Docker.\e[0m"
-           echo "At least 4GB of memory required. You have $$(numfmt --to iec $$((mem_available * one_meg)))"
-           echo
-           warning_resources="true"
-         fi
-         if (( cpus_available < 2 )); then
-           echo
-           echo -e "\033[1;33mWARNING!!!: Not enough CPUS available for Docker.\e[0m"
-           echo "At least 2 CPUs recommended. You have $${cpus_available}"
-           echo
-           warning_resources="true"
-         fi
-         if (( disk_available < one_meg * 10 )); then
-           echo
-           echo -e "\033[1;33mWARNING!!!: Not enough Disk space available for Docker.\e[0m"
-           echo "At least 10 GBs recommended. You have $$(numfmt --to iec $$((disk_available * 1024 )))"
-           echo
-           warning_resources="true"
-         fi
-         if [[ $${warning_resources} == "true" ]]; then
-           echo
-           echo -e "\033[1;33mWARNING!!!: You have not enough resources to run Airflow (see above)!\e[0m"
-           echo "Please follow the instructions to increase amount of resources available:"
-           echo "   https://airflow.apache.org/docs/apache-airflow/stable/howto/docker-compose/index.html#before-you-begin"
-           echo
-         fi
-         mkdir -p /sources/logs /sources/dags /sources/plugins
-         chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
-         exec /entrypoint airflow version
-     # yamllint enable rule:line-length
-     
+      - -c
+      - |
+        mkdir -p /sources/logs /sources/dags /sources/plugins
+        chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
+        exec /entrypoint airflow version
+
 volumes:
     local_postgres_data:
