--- a/.env
+++ b/.env
@@ -10,6 +10,11 @@ AIRFLOW__DATABASE__LOAD_DEFAULT_CONNECTIONS=False
 # Airflow Init
 _AIRFLOW_DB_UPGRADE=True
 _AIRFLOW_WWW_USER_CREATE=True
+_PIP_ADDITIONAL_REQUIREMENTS=${_PIP_ADDITIONAL_REQUIREMENTS:-}
+_AIRFLOW_WWW_USER_USERNAME=airflow
+_AIRFLOW_WWW_USER_PASSWORD=airflow
+AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION='true'
+AIRFLOW__CORE__FERNET_KEY=''
 
 
 #python script variables
