--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
     python3-dev \
-    dbt-core \
-    dbt-postgres
-
+    && pip install --upgrade pip
 USER airflow
+RUN python -m pip install dbt-core dbt-postgres
+
