fixed env variable and fixed airflow dockerfile

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ POSTGRES_PASSWORD=admin
 POSTGRES_DB=covid19_project
 
 # Backend DB - update your username and password
-AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=
+AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgresql:admin@db:5432/covid19_project
 AIRFLOW__DATABASE__LOAD_DEFAULT_CONNECTIONS=False
 
 # Airflow Init
