--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -9,8 +9,10 @@ RUN apt-get update && apt-get install -y apt-utils
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
-    python3-dev \
-    && pip install --upgrade pip
+    python3-dev
+    
 USER airflow
+RUN pip install --upgrade pip
 RUN python -m pip install dbt-core dbt-postgres
 
+ 
