moving dbt_project directory to be available for airflow

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -3,6 +3,8 @@ FROM apache/airflow:2.9.2
 # Install dbt and other required packages
 USER root
 COPY requirements.txt /requirements.txt
+COPY dbt_project /opt/airflow/dbt_project
+
 
 RUN apt-get update && apt-get install -y apt-utils
 
