--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -3,7 +3,7 @@ FROM apache/airflow:2.9.2
 # Install dbt and other required packages
 USER root
 COPY requirements.txt /requirements.txt
-COPY dbt_project /root/.dbt/
+COPY dbt_project /opt/airflow/dbt_project/
 
 
 RUN apt-get update && apt-get install -y apt-utils
@@ -11,7 +11,8 @@ RUN apt-get update && apt-get install -y apt-utils
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
-    python3-dev
+    python3-dev \
+    git
     
 USER airflow
 RUN pip install --upgrade pip
